Improve importing and exporting of functions